--- a/.github/workflows/python-ci.yml
+++ b/.github/workflows/python-ci.yml
@@ -3,6 +3,8 @@ name: CI
 on:
   # Triggers the workflow on any push
   push:
+    branches:
+      - '**'
   pull_request:
 
   # Allows you to run this workflow manually from the Actions tab
