--- a/.github/workflows/python-ci.yml
+++ b/.github/workflows/python-ci.yml
@@ -3,8 +3,9 @@ name: CI
 on:
   # Triggers the workflow on any push
   push:
+    branches:
+      - '**'
   pull_request:
-    branches: [ "main" ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
